# 2015-Vision-Lab

./: .gitignore
Scale Factor/: CMakeLists.txt  main.cpp  scalefactor.c  scalefactor.cpp  scalefactor.hpp
caffe_classifier/: .gitignore  CMakeLists.txt  CaffeBatchPrediction.cpp  CaffeBatchPrediction.hpp  caffeclassifier.h  classification.cpp  deploy.prototxt  labels.txt  main.cpp  main_slow.cpp  mean.binaryproto  snapshot_iter_2880.caffemodel  snapshot_iter_2910.caffemodel  snapshot_iter_96.caffemodel  train_val.prototxt
grab_display/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ColorSharpen.cpp  Makefile  cmake_install.cmake  createtrainsamples.pl  display  display.cpp  display.cpp~  imageShift.cpp
nonmax_suppression/: fast_nms.cpp
opencv_createsamples_color/: CMakeLists.txt  README.md  _cvhaartraining.h  createsamples.cpp  cvhaartraining.cpp  cvhaartraining.h  cvsamples.cpp
